# seriot

./: .gitignore  README.md  com.ak1932.serial_plotter.json  meson.build
data/: com.ak1932.serial_plotter.desktop.in  com.ak1932.serial_plotter.gschema.xml  com.ak1932.serial_plotter.metainfo.xml.in  com.ak1932.serial_plotter.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  circular_buffer.vala  config.vala  main.vala  meson.build  preferences.ui  preferences.vala  seriot.gresource.xml  window.ui  window.vala
src/gtk/: help-overlay.ui
src/live-chart-1.10.0/: meson.build
src/live-chart-1.10.0/src/: meson.build
src/serial_port/: serial_port.vala
